misspell fix and clean white space

--- a/bi-app/_mixins.scss
+++ b/bi-app/_mixins.scss
@@ -1,9 +1,9 @@
 // ------------------------------------------
 // bi app mixins
-// authors: 
+// authors:
 // twitter.com/anasnakawa
 // twitter.com/victorzamfir
-// licensed under the MIT license 
+// licensed under the MIT license
 // http://www.opensource.org/licenses/mit-license.php
 // ------------------------------------------
 
@@ -196,25 +196,25 @@
 // radius
 @mixin border-top-left-radius($radius) {
   -webkit-border-top-#{$bi-app-left}-radius: $radius;
-     -moz-border-top#{$bi-app-left}-radius: $radius;
+     -moz-border-top-#{$bi-app-left}-radius: $radius;
           border-top-#{$bi-app-left}-radius: $radius;
 }
 
 @mixin border-top-right-radius($radius) {
   -webkit-border-top-#{$bi-app-right}-radius: $radius;
-     -moz-border-top#{$bi-app-right}-radius: $radius;
+     -moz-border-top-#{$bi-app-right}-radius: $radius;
           border-top-#{$bi-app-right}-radius: $radius;
 }
 
 @mixin border-bottom-left-radius($radius) {
   -webkit-border-bottom-#{$bi-app-left}-radius: $radius;
-     -moz-border-bottom#{$bi-app-left}-radius: $radius;
+     -moz-border-bottom-#{$bi-app-left}-radius: $radius;
           border-bottom-#{$bi-app-left}-radius: $radius;
 }
 
 @mixin border-bottom-right-radius($radius) {
   -webkit-border-bottom-#{$bi-app-right}-radius: $radius;
-     -moz-border-bottom#{$bi-app-right}-radius: $radius;
+     -moz-border-bottom-#{$bi-app-right}-radius: $radius;
           border-bottom-#{$bi-app-right}-radius: $radius;
 }
 
